--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     ],
     "require": {
         "php": "^8.1",
+        "laminas/laminas-text": "^2.10",
         "laravel-zero/framework": "^10.0",
         "nunomaduro/termwind": "^1.15"
     },
