--- a/.github/workflows/phplint.yml
+++ b/.github/workflows/phplint.yml
@@ -1,10 +1,11 @@
 name: PHP linting and CS Git Action
 
-on: [ push ]
+on:
+  pull_request:
+    types: [opened, edited, reopened, synchronize]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
@@ -46,7 +47,7 @@ jobs:
         git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY
         git config pull.rebase false
         git pull
-        git commit -am "Run automated code lint"
+        git commit -am "Automated code lint ${{ github.sha }}"
         git push
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
