Update GitAction lint

--- a/.github/workflows/phplint.yml
+++ b/.github/workflows/phplint.yml
@@ -19,7 +19,7 @@ jobs:
 
     - name: Cache Composer packages
       id: composer-cache
-      uses: actions/cache@v3
+      uses: actions/cache@v4
       with:
         path: vendor
         key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
@@ -28,13 +28,13 @@ jobs:
 
     - name: Install dependencies
       if: steps.composer-cache.outputs.cache-hit != 'true'
-      run: composer install --prefer-dist --no-progress --no-suggest
+      run: composer install --prefer-dist --no-progress
 
     - name: Autocorrect PHP12 code standards violations
       run: composer phpcbf
       continue-on-error: true
       # Attempt to lint code but do not fail if unable
-      
+
     - name: Set PHPCS config
       run : composer phpcs-config-set
       # Run PHPCS config set to stop it exiting on a warning when linting
