Update GitAction to only run lint on PR merge

--- a/.github/workflows/phplint.yml
+++ b/.github/workflows/phplint.yml
@@ -1,8 +1,10 @@
 name: PHP linting and CS Git Action
 
 on:
-  pull_request:
-    types: [opened, edited, reopened, synchronize]
+  workflow_dispatch:
+  push:
+    branches:
+      - 'main'
 
 jobs:
   build:
