--- a/composer.json
+++ b/composer.json
@@ -5,15 +5,15 @@
     "type": "project",
     "license": "MIT",
     "require": {
-        "php": "^8.1",
-        "laminas/laminas-text": "^2.10",
-        "laravel-zero/framework": "^10.0",
-        "nunomaduro/termwind": "^1.15"
+        "php": "^8.2",
+        "illuminate/log": "^11.0",
+        "laravel-zero/framework": "^11.0",
+        "nunomaduro/termwind": "^2.0"
     },
     "require-dev": {
-        "laravel/pint": "^1.5",
-        "mockery/mockery": "^1.5.1",
-        "pestphp/pest": "^1.22.3",
+        "laravel/pint": "*",
+        "mockery/mockery": "*",
+        "pestphp/pest": "*",
         "composer/composer": "*",
         "squizlabs/php_codesniffer": "*"
     },
