--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -63,7 +63,7 @@ jobs:
           COMMENT_BODY=""
 
           if [ -n "$ERROR_LINES" ]; then
-            COMMENT_BODY="${COMMENT_BODY}**PHP Code linting results:**\n\n\`\`\`\n${ERROR_LINES}\n\`\`\`\n"
+            COMMENT_BODY="${COMMENT_BODY}**✨PHP Code linting results:**\n\n\`\`\`\n${ERROR_LINES}\n\`\`\`\n"
           fi
 
           if [ "$WARNING_COUNT" -gt 0 ]; then
